# evm-cli

./: .gitmodules  Cargo.toml  Incrementer_ABI.json  README.md
contract/: CallerContract.sol
contract/bear/: ERC20BribeModule.abi.json  Honey.abi.json
contract/bear/deploy_contracts/: ERC20HoneyModule.abi.json  PriceFeed.abi.json  STGUSDC.abi.json  WBERA.abi.json  WBTC.abi.json
contract/bear/nft/: Balentines.abi.json  Ticket.abi.json  booba_on_bera.abi.json  lunar_new_year.abi.json
contract/bear/precompile_contracts/: IBGTModule.abi.json  IBankModule.abi.json  IBerachefModule.abi.json  IBribeModule.abi.json  IDexModule.abi.json  IDistributionModule.abi.json  IERC20BankModule.abi.json  IERC20DexModule.abi.json  IEpochsModule.abi.json  IGovernanceModule.abi.json  IHoneyModule.abi.json  IOracleModule.abi.json  IRewardsModule.abi.json  IStakingModule.abi.json
contract/caller_contract/: CallerContract_ABI.json
contract/metis/: emetis.abi.json
js/: main.js
reseach/: doc.md
src/: main.rs
src/airdrop/: bear.rs  mod.rs
src/bear/: erc20_bribe.rs  honey.rs  mod.rs
src/bear/bex/: bera_croc_multi_swap.rs  mod.rs
src/bear/deploy_contracts/: erc20_bribe.rs  erc20_honey.rs  honey.rs  mod.rs  stg_usdc.rs  wbera.rs  wbtc.rs  weth.rs
src/bear/nft/: balentines.rs  booba_on_bera.rs  lunar_new_year.rs  mod.rs  ticket.rs
src/command/: auto.rs  balance.rs  bear.rs  deploy_sc.rs  dev.rs  generator.rs  keys.rs  mod.rs  transfer.rs
src/config/: mod.rs
src/constant/: mod.rs
src/incrementer/: call_incrementer.rs  mod.rs
src/utils/: mod.rs
(+31 files in other folders)
