[package]
name = "evm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
ethers-solc = "1.0.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.89"
serde = "1.0.149"
k256 = "0.13.3"
reqwest = "0.11.24"
structopt = "0.3.26"
thiserror = "1.0.56"
toml = "0.8.10"
dirs = "5.0.1"
log = "0.4.20"
env_logger = "0.11.1"
anyhow = "1.0.79"
ethers-core = "2.0.13"
ethers-signers = "2.0.13"
colored = "2.1.0"
